infra/k8s/customers-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: customers-mongo-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: customers-mongo
   template:
      metadata:
         labels:
            app: customers-mongo
      spec:
         containers:
            - name: customers-mongo
              image: mongo
---
apiVersion: v1
kind: Service
metadata:
   name: customers-mongo-srv
spec:
   selector:
      app: customers-mongo
   ports:
      - name: db
        protocol: TCP
        port: 27017
        targetPort: 27017
