infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-service
   annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
   rules:
      - host: ticketing.dev
        http:
           paths:
              - path: /api/users/?(.*)
                pathType: Prefix
                backend:
                   service:
                      name: cream-paws-auth-srv
                      port:
                         number: 3000
              - path: /api/stock/?(.*)
                pathType: Prefix
                backend:
                   service:
                      name: stock-srv
                      port:
                         number: 3000
              - path: /api/customer/?(.*)
                pathType: Prefix
                backend:
                   service:
                      name: customers-srv
                      port:
                         number: 3000
              - path: /api/orders/?(.*)
                pathType: Prefix
                backend:
                   service:
                      name: cream-paws-orders-srv
                      port:
                         number: 3000
